js/src/tests/test262/built-ins/Error/S15.11.3_A1_T1.js
var
err1
=
Error
(
"
err
"
)
;
if
(
!
Function
.
prototype
.
isPrototypeOf
(
err1
.
constructor
)
)
{
ERROR
(
'
#
1
:
var
err1
=
Error
(
"
err
"
)
;
Function
.
prototype
.
isPrototypeOf
(
err1
.
constructor
)
return
true
.
Actual
:
'
+
Function
.
prototype
.
isPrototypeOf
(
err1
.
constructor
)
)
;
}
if
(
!
Function
.
prototype
.
isPrototypeOf
(
Error
.
constructor
)
)
{
ERROR
(
'
#
2
:
Function
.
prototype
.
isPrototypeOf
(
Error
.
constructor
)
return
true
.
Actual
:
'
+
Function
.
prototype
.
isPrototypeOf
(
Error
.
constructor
)
)
;
}
reportCompare
(
0
0
)
;
